--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
   
 <div>
   <h4>
-    যোগাযোগ: 
+    Make by mr. abuhurira          যোগাযোগ: 
     <a href="tel:+8801966061084" style="color: #0000FF; text-decoration: underline;">01966061084</a>
   </h4>
 </div>
